# eih

./: CMakeLists.txt  nodelet_plugins.xml  package.xml
apps/example/: CMakeLists.txt  gnuplot_example.cpp
cmake/: EIHConfig.cmake.in  EIHCoreConfig.cmake.in  FindFlyCapture2.cmake  FindLog4cxx.cmake  eih.pc.in
eih/: CMakeLists.txt
eih/camera/: PointGreyCamera.cpp  PointGreyCamera.h  camera_exceptions.h
eih/eih/: flow.cpp  flow.h
eih/utils/: .gitignore  Paths.h  Paths.h.in
launch/: eih.launch  pointgrey_camera.launch
src/nodelets/: debayer.cpp
src/nodes/: debayer.cpp
unittests/: CMakeLists.txt  testFlow.cpp  testPointGreyCamera.cpp
